@@ -1,3 +1,9 @@
+2002-04-07  Rachel Hestilow  <hestilow@ximian.com>
+
+	* applier.c (bg_applier_get_preview_widget): Connect to "realize"
+	on preview.
+	(preview_realized_cb): Added function to initialize preview pixmap.
+
 2002-03-28  Richard Hestilow  <hestilow@ximian.com>
 
 	* applier.c (bg_applier_set_prop): Only set size for preview modes.
